--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,8 +2,8 @@ body {
     color: #333333;
 }
 
-p {
-    line-height: 1.5;
+header {
+    opacity: 0.9;
 }
 
 footer {
@@ -22,17 +22,16 @@ a {
     cursor: pointer;
 }
 
+p {
+    line-height: 1.5;
+}
+
 .nav-link {
     font-weight: 600;
 }
 
 .background-img {
     background-image: url("../assets/280.png");
-}
-
-.navbar {
-    opacity: 0.9;
-    /*background: #c6c8ca;*/
 }
 
 .title {
