--- a/src/main/resources/templates/dashboard/bankServices.html
+++ b/src/main/resources/templates/dashboard/bankServices.html
@@ -13,15 +13,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body class="background-img">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="">
+        <header class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand scroll-top">
                 <img th:src="@{/assets/bank-icon.png}"
                      width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -34,10 +30,10 @@
                         <a class="nav-link" th:href="@{/client}">Клиенты</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="scroll-top" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Действия
+                        <a class="nav-link active dropdown-toggle scroll-top" role="button"
+                           data-toggle="dropdown">Действия
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="scroll-top">
+                        <div class="dropdown-menu">
                             <th:block>
                                 <a class="dropdown-item" th:href="@{/profile/logUp}">Добавить сотрудника</a>
                             </th:block>
@@ -51,12 +47,12 @@
                     <form class="form-inline my-2 my-lg-0" th:action="@{/profile/logOut}">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
-                            Выйти
+                            <span th:text="#{nav.logout}"></span>
                         </button>
                     </form>
                 </div>
             </div>
-        </nav>
+        </header>
         <div class="container-fluid">
             <div class="row row-center">
                 <div class="col-md-1"></div>
