--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -13,42 +13,40 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body class="background-img">
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="">
+        <header class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand scroll-top">
                 <img th:src="@{/assets/bank-icon.png}"
-                     width="30" height="30" class="d-inline-block align-top" alt="Image"> Bank-system
+                     width="30" height="30" class="d-inline-block align-top" alt="Image"> <span
+                    th:text="#{app.name}"></span>
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}">Главная</a>
+                        <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
                     </li>
                     <li class="nav-item">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="scroll-top">
-                            <span class="sr-only">(current)</span>Профиль</a>
+                        <a class="nav-link active scroll-top">
+                            <span class="sr-only">(current)</span>
+                            <span th:text="#{nav.profile}"></span>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/client}">Клиенты</a>
+                        <a class="nav-link" th:href="@{/client}"><span th:text="#{nav.clients}"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/bankServices}">Действия</a>
+                        <a class="nav-link" th:href="@{/bankServices}"><span th:text="#{nav.actions}"></span></a>
                     </li>
                 </ul>
                 <div class="logout">
                     <form class="form-inline my-2 my-lg-0" th:action="@{/profile/logOut}">
                         <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
                             <i class="fas fa-sign-out-alt"></i>
-                            Выйти
+                            <span th:text="#{nav.logout}"></span>
                         </button>
                     </form>
                 </div>
             </div>
-        </nav>
+        </header>
         <div class="container-fluid">
             <div class="row row-center">
                 <div class="col-md-1"></div>
@@ -57,7 +55,7 @@
                         <div class="title">
                             <i class="fas fa-user-circle"></i>
                             <h2>
-                                Здравствуйте,
+                                <span th:text="#{user.greeting.text}"></span>
                                 <span class="badge badge-success" th:text="${user.getUsername()}"></span>
                             </h2>
                         </div>
@@ -106,25 +104,25 @@
             </div>
             <div class="col-md-1"></div>
         </div>
-<!--        <footer>-->
-<!--            <div style="font-size: 64px">-->
-<!--                <a href="https://www.mastercard.by/ru-by.html" target="_blank">-->
-<!--                    <i class="fab fa-cc-mastercard"></i>-->
-<!--                </a>-->
-<!--                <a href="https://cis.visa.com/ru_TJ" target="_blank">-->
-<!--                    <i class="fab fa-cc-visa"></i>-->
-<!--                </a>-->
-<!--                <a href="https://pay.amazon.com" target="_blank">-->
-<!--                    <i class="fab fa-cc-amazon-pay"></i>-->
-<!--                </a>-->
-<!--                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">-->
-<!--                    <i class="fab fa-cc-apple-pay"></i>-->
-<!--                </a>-->
-<!--                <a href="https://www.paypal.com/by/home" target="_blank">-->
-<!--                    <i class="fab fa-cc-paypal"></i>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </footer>-->
+        <!--        <footer>-->
+        <!--            <div style="font-size: 64px">-->
+        <!--                <a href="https://www.mastercard.by/ru-by.html" target="_blank">-->
+        <!--                    <i class="fab fa-cc-mastercard"></i>-->
+        <!--                </a>-->
+        <!--                <a href="https://cis.visa.com/ru_TJ" target="_blank">-->
+        <!--                    <i class="fab fa-cc-visa"></i>-->
+        <!--                </a>-->
+        <!--                <a href="https://pay.amazon.com" target="_blank">-->
+        <!--                    <i class="fab fa-cc-amazon-pay"></i>-->
+        <!--                </a>-->
+        <!--                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">-->
+        <!--                    <i class="fab fa-cc-apple-pay"></i>-->
+        <!--                </a>-->
+        <!--                <a href="https://www.paypal.com/by/home" target="_blank">-->
+        <!--                    <i class="fab fa-cc-paypal"></i>-->
+        <!--                </a>-->
+        <!--            </div>-->
+        <!--        </footer>-->
         <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
