--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,36 +1,43 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Главная страница</title>
-        <link rel="icon" href="assets/bank-icon.png">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="icon" th:href="@{/assets/bank-icon.png}">
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/css/main.css}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body class="background-img">
-        <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <header class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand scroll-top">
-                <img src="assets/bank-icon.png"
-                     width="30" height="30" class="d-inline-block align-top" alt=""> Bank-system
+                <img th:src="@{/assets/bank-icon.png}"
+                     width="30" height="30" class="d-inline-block align-top" alt="Image"> <span
+                    th:text="#{app.name}"></span>
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active scroll-top">
-                        <a class="nav-link"><span class="sr-only">(current)</span>Главная</a>
+                        <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="profile">Профиль</a>
+                        <a class="nav-link" th:href="@{/worker/profile}">
+                            <span th:text="#{nav.profile}"></span>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="client">Клиенты</a>
+                        <a class="nav-link" th:href="@{/client}">
+                            <span th:text="#{nav.clients}"></span>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bankServices">Действия</a>
+                        <a class="nav-link" th:href="@{/operations}">
+                            <span th:text="#{nav.actions}"></span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -51,21 +58,21 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="assets/ph-1.png" class="d-block w-100" alt="...">
+                                            <img th:src="@{/assets/ph-1.png}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>First slide label</h5>
                                                 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="assets/ph-2.png" class="d-block w-100" alt="...">
+                                            <img th:src="@{/assets/ph-2.png}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Second slide label</h5>
                                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="assets/ph-3.png" class="d-block w-100" alt="...">
+                                            <img th:src="@{/assets/ph-3.png}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <h5>Third slide label</h5>
                                                 <p>Praesent commodo cursus magna, vel scelerisque nisl
@@ -86,15 +93,18 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 th:text="#{txt.card.greetings}" class="card-title"></h5>
+                                <p th:text="#{txt.card.greetings.body}" class="card-text"></p>
                                 <p class="card-text">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                    <small class="text-muted">
+                                        <span th:text="#{txt.blockquote}"></span>
+                                        <cite th:text="#{txt.blockquote.author}"></cite>
+                                    </small>
                                 </p>
                                 <div>
-                                    <a href="profile/logIn" role="button" class="btn btn-success btn-lg">Войти</a>
-                                    <a href="profile/logOut" role="button" class="btn btn-primary btn-lg">Зарегистрироваться</a>
+                                    <a th:href="@{/worker/logIn}" role="button" class="btn btn-success btn-lg">
+                                        <span th:text="#{btn.login}"></span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -103,32 +113,17 @@
                 <div class="col-md-1"></div>
             </div>
         </div>
-<!--        <footer>-->
-<!--            <div style="font-size: 64px">-->
-<!--                <a href="https://www.mastercard.by/ru-by.html" target="_blank">-->
-<!--                    <i class="fab fa-cc-mastercard"></i>-->
-<!--                </a>-->
-<!--                <a href="https://cis.visa.com/ru_TJ" target="_blank">-->
-<!--                    <i class="fab fa-cc-visa"></i>-->
-<!--                </a>-->
-<!--                <a href="https://pay.amazon.com" target="_blank">-->
-<!--                    <i class="fab fa-cc-amazon-pay"></i>-->
-<!--                </a>-->
-<!--                <a href="https://www.apple.com/ru/apple-pay/" target="_blank">-->
-<!--                    <i class="fab fa-cc-apple-pay"></i>-->
-<!--                </a>-->
-<!--                <a href="https://www.paypal.com/by/home" target="_blank">-->
-<!--                    <i class="fab fa-cc-paypal"></i>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </footer>-->
-        <script src="js/jquery-3.3.1.js"></script>
+
+        <!-- SCRIPTS -->
+        <script th:src="@{/js/jquery-3.3.1.js}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
                 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
                 crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
                 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
                 crossorigin="anonymous"></script>
-        <script src="js/main.js"></script>
+        <script th:src="@{/js/main.js}"></script>
+        <script th:src="@{/js/user/User.js}"></script>
+        <script th:src="@{/js/user/userService.js}"></script>
     </body>
 </html>
