Html files were fixed.

--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -99,7 +99,7 @@
         <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/client/clientController.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/userService.js}"></script>
+        <script th:src="@{/js/user/workerService.js}"></script>
         <script th:src="@{/js/profile/profileController.js}"></script>
     </body>
 </html>
