--- a/src/main/resources/templates/worker/logIn.html
+++ b/src/main/resources/templates/worker/logIn.html
@@ -45,7 +45,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text"><i class="fas fa-passport"></i></div>
                             </div>
-                            <input type="text" name="idPassport" class="form-control" placeholder="Введите ID паспорта">
+                            <input type="text" name="username" class="form-control" placeholder="Введите ID паспорта">
                         </div>
                         <div class="input-group mb-2 mr-sm-2 input">
                             <div class="input-group-prepend">
@@ -72,7 +72,7 @@
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/userService.js}"></script>
+        <script th:src="@{/js/user/workerService.js}"></script>
         <script th:src="@{/js/user/userController.js}"></script>
     </body>
 </html>
