--- a/src/main/resources/templates/client/show.html
+++ b/src/main/resources/templates/client/show.html
@@ -66,7 +66,7 @@
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/userService.js}"></script>
+        <script th:src="@{/js/user/workerService.js}"></script>
         <script th:src="@{/js/profile/profileController.js}"></script>
     </body>
 </html>
