--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active scroll-top">
-                        <a class="nav-link" th:href="@{/}"><span th:text="#{nav.home}"></span></a>
+                        <a class="nav-link"><span th:text="#{nav.home}"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/worker/profile}">
@@ -124,6 +124,6 @@
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/userService.js}"></script>
+        <script th:src="@{/js/user/workerService.js}"></script>
     </body>
 </html>
