--- a/src/main/resources/templates/worker/logUp.html
+++ b/src/main/resources/templates/worker/logUp.html
@@ -134,7 +134,7 @@
                 crossorigin="anonymous"></script>
         <script th:src="@{/js/main.js}"></script>
         <script th:src="@{/js/user/User.js}"></script>
-        <script th:src="@{/js/user/userService.js}"></script>
+        <script th:src="@{/js/user/workerService.js}"></script>
         <script th:src="@{/js/user/userController.js}"></script>
     </body>
 </html>
