Added formatted dates in profile view.

--- a/src/main/resources/templates/worker/profile.html
+++ b/src/main/resources/templates/worker/profile.html
@@ -111,7 +111,7 @@
                                 <div class="user-info">
                                     <h5>
                                         <span th:text="#{passport.birth.date}"></span>:
-                                        <span th:text="${worker.passport.birthDate}"></span>
+                                        <span th:text="${birthDate}"></span>
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.gender.label}"></span>:
@@ -137,11 +137,11 @@
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.date.of.issue}"></span>:
-                                        <span th:text="${worker.passport.dateOfIssue}"></span>
+                                        <span th:text="${dateOfIssue}"></span>
                                     </h5>
                                     <h5>
                                         <span th:text="#{passport.date.of.expire}"></span>:
-                                        <span th:text="${worker.passport.dateOfExpire}"></span>
+                                        <span th:text="${dateOfExpire}"></span>
                                     </h5>
                                 </div>
                             </div>
