--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -5,7 +5,6 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Упс..</title>
-        <title>Профиль</title>
         <link rel="icon" th:href="@{/assets/bank-icon.png}">
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <link rel="stylesheet" th:href="@{/css/error.css}">
@@ -19,7 +18,7 @@
                         <span>404</span>
                     </div>
                     <div class="error-message">
-                        <span th:text="${message}">Кажется, запрашиваемый Вами ресурс не найден :(</span>
+                        <span>Кажется, запрашиваемый Вами ресурс не найден :(</span>
                     </div>
                     <div class="button-container">
                         <a th:href="@{/}" class="btn btn-warning btn-lg" role="button">На главную</a>
