--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -38,7 +38,9 @@ p {
     font-size: 64px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
+    padding: 3% 0;
+    border-radius: .30rem;
 }
 
 .rounded-container {
